# CppSems24-25Public

./: .clang-format  .gitignore  README.md
Sem1_CommandLine/: README.md  main.cpp
Sem2_vim_vscode/: README.md
Sem3_containers_ub_optim/: README.md  ce_ub.cpp  collatz_conjecture.cpp  godbolt_optim.cpp  vector_17.cpp
Sem4_warnings_pointers/: 1_pointers.cpp  2_arrays.cpp  5_new_and_array.cpp  6_memory_leak.cpp  README.md  main.cpp  stackoverflow.cpp  warnings.cpp
Sem5_compilation/: README.md  main.cpp  other.cpp  pragma_gcc.cpp  preproc.cpp
Sem5_compilation/headers/: header_guard.hpp  main.cpp
Semestr1/Sem10_terminal_2/: README.md
Semestr1/Sem11_git/: README.md
Semestr1/Sem12_inheritance/: 1_1_same_names.cpp  2_3_inaccessible_context.cpp  2_4_private_base.cpp  2_5_access_madness.cpp  3_1_parent_ctor.cpp  3_2_default_derived_ctor.cpp  3_3_ctors_order.cpp  3_3_use_base_ctors.cpp  3_4_slicing.cpp  3_5_ctors_order.cpp  4_1_func_calls.cpp  4_2_diff_funcs.cpp  4_3_mode_funcs.cpp  5_ebo.cpp  6_circle_ellipse.cpp  7_1_multiple_inheritance.cpp  7_2_casts.cpp  7_3_diamond_problems.cpp  7_4_side_cast.cpp  7_5_inaccessible_base.cpp
Semestr1/Sem13_virtual/: README.md
Semestr1/Sem14_templates_1/: 1_basics.cpp  2_1_specialisation.cpp  2_2_instantiation.cpp  2_3_implicit_instantiation.cpp  2_4_delete_instantiation.cpp  2_5_spec_more_params.cpp  3_1_tad.cpp  3_2_ctad.cpp  3_3_default_params.cpp  3_5_correct.cpp  (+12 more)
Semestr2/Sem14_lambdas/boost/: CMakeLists.txt  README.md
Semestr2/Sem14_lambdas/boost/src/: 1_bind.cpp  2_function_button.cpp
style/: .clang-tidy  README.md
(+469 files in other folders)
